Added exception handling and added some improved code